macOS: Treat cmd + '+' as cmd + '1' on Czech keyboard layouts.

This results in more intuitive behavior of Chrome with respect to tab switching
shortcuts.

Bug: 889424
Change-Id: I1ccba5141a3ddbfd2391d2d40e0d5884b50a382f
Reviewed-on: https://chromium-review.googlesource.com/1259244
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596288}
Former-commit-id: 2fc6dc8cb9e1587adacdabdb6ebe75070c9def92