chrome/browser/ui/cocoa/nsmenuitem_additions.h
@@ -20,5 +20,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Used by tests to set internal state without having to change global input
 // source.
 void SetIsInputSourceDvorakQwertyForTesting(bool is_dvorak_qwerty);
+void SetIsInputSourceCzechForTesting(bool is_czech);
 
 #endif  // CHROME_BROWSER_UI_COCOA_NSMENUITEM_ADDITIONS_H_
